Fix: Draggable event editor and z-index fixed.

--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,11 @@
     z-index: 20;
     opacity: 0; }
 
+.ui-dialog {
+  z-index: 999999; }
+  .ui-dialog .ui-dialog-titlebar, .ui-dialog .ui-dialog-title {
+    cursor: move; }
+
 #events .event-input {
   box-sizing: border-box;
   width: 100%;
